--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,148 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.css-6ga8lj-MuiInputAdornment-root {
+  color: #1565C0 !important;
+}
+
+.size {
+  font-size: 18px !important;
+}
+
+.Main_Card {
+  position: relative !important;
+  max-width: 600px !important;
+  margin: 20px auto !important;
+  padding: 2rem !important;
+  background-color: #F9EDED !important;
+  border-radius: 2rem !important;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px !important;
+}
+
+.Text {
+  color: #1565C0 !important;
+  font-size: 20px !important;
+  text-transform: uppercase !important;
+}
+
+.deleteBtn {
+  right: 40px !important;
+  font-size: 3px !important;
+  position: absolute !important;
+  top: 10px !important;
+  z-index: 1 !important;
+  background-color: #1976d2 !important;
+  color: white !important;
+  cursor: pointer !important;
+  border-radius: 50% !important;
+  width: 25px !important;
+  height: 25px !important;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2) !important;
+}
+
+.addBtn {
+  font-size: 3px !important;
+  position: absolute !important;
+  top: 10px !important;
+  right: 10px !important;
+  z-index: 1 !important;
+  background-color: #1976d2 !important;
+  color: white !important;
+  cursor: pointer !important;
+  border-radius: 50% !important;
+  width: 25px !important;
+  height: 25px !important;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2) !important;
+}
+
+.addBtn, .deleteBtn:hover {
+  background-color: #4579ad;
+}
+
+.d-flex {
+  max-width: 750px !important;
+  display: flex;
+  justify-content: end;
+  margin: 50px 0px;
+}
+
+.active {
+
+  color: #1976d2 !important;
+  background-color: #1565C0 !important;
+}
+
+.notactive {
+  color: white !important;
+  background-color: rgba(255, 0, 0, 0.527) !important;
+}
+
+.StackChip {
+  margin: 10px;
+}
+
+.css-6od3lo-MuiChip-label {
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
+}
+
+.toggleIcon {
+  color: white !important;
+}
+
+.main-table {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 30px 0px;
+}
+
+.table-body {
+  max-width: 1100px;
+  box-shadow: 0px 0px 100px #1976d221;
+  overflow: auto !important;
+}
+
+.btn_group {
+  display: flex;
+  justify-content: center;
+}
+
+.main-btn_group {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+  width: 900px;
+}
+
+.linkBtn {
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  color: white;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: medium;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px 15px;
+  background-color: #1565C0;
+  margin: 0px 15px;
+}
+
+.MuiDataGrid-row:nth-child(odd) {
+  background-color: #a8a8a848 !important;
+}
+
+/* .css-4k60b2-MuiDataGrid-root .MuiDataGrid-cell {
+  border: 1px solid #1565c07e !important;
+}
+
+.css-4k60b2-MuiDataGrid-root .MuiDataGrid-cell:last-child {
+  border-right: none !important;
+}
+
+.css-4k60b2-MuiDataGrid-root .MuiDataGrid-cell:nth-child(2) {
+  border-left: none !important;
+} */
